--- a/Partida/teste.html
+++ b/Partida/teste.html
@@ -11,68 +11,76 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
-        // Setup basic scene
+        // Setup básico da cena
         const scene = new THREE.Scene();
         const aspect = window.innerWidth / window.innerHeight;
         
-        // Setup camera for top view
+        // Configuração da câmera para vista de cima
         const camera = new THREE.OrthographicCamera(
             -aspect * 30, aspect * 30, 30, -30, 0.1, 1000
         );
-        camera.position.set(0, 50, 0); // Elevated position for top view
+        camera.position.set(0, 50, 0); // Posição elevada para vista de cima
         camera.lookAt(0, 0, 0);
         
-        // Setup renderer
-        const renderer = new THREE.WebGLRenderer({ alpha: true }); // Enable alpha for transparency
+        // Configuração do renderizador
+        const renderer = new THREE.WebGLRenderer({ alpha: true }); // Habilitar alpha para transparência
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        // Add lighting
+        // Adicionar iluminação
         const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
         scene.add(ambientLight);
         const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
         directionalLight.position.set(0, 50, 50).normalize();
         scene.add(directionalLight);
 
-        // Load the texture for the first square
+        // Carregar textura para o primeiro quadrado
         const textureLoader = new THREE.TextureLoader();
-        const texture = textureLoader.load('https://war-fast.vercel.app/GAME/PAISES/Brasil1.png', function(texture) {
+        const texture = textureLoader.load('https://example.com/your-image.png', function(texture) {
             texture.wrapS = THREE.RepeatWrapping;
             texture.wrapT = THREE.RepeatWrapping;
             texture.repeat.set(1, 1);
         });
 
-        // Helper function to create a shape
+        // Criar material inicial com a textura
+        const initialMaterial = new THREE.MeshBasicMaterial({ map: texture });
+
+        // Criar material escurecido para a imagem
+        const darkenedMaterial = new THREE.MeshBasicMaterial({ map: texture, transparent: true, opacity: 0.5 });
+
+        // Criar o primeiro quadrado
+        const firstSquare = createShape(4, initialMaterial);
+        firstSquare.position.set(-8, 0, -8); // Posicionar o primeiro quadrado
+        scene.add(firstSquare);
+
+        // Criar os demais quadrados com cores aleatórias
+        for (let i = 0; i < 23; i++) {
+            const shape = createShape(4, new THREE.MeshLambertMaterial({ color: Math.random() * 0xffffff }));
+            shape.position.set(
+                (Math.random() - 0.5) * 30,
+                0,
+                (Math.random() - 0.5) * 30
+            );
+            scene.add(shape);
+        }
+
+        // Função para criar um quadrado
         function createShape(size, material) {
             const geometry = new THREE.BoxGeometry(size, size, size);
             return new THREE.Mesh(geometry, material);
         }
 
-        // Add 24 identical shapes to the scene, arranged in a grid
-        const gridSize = 6;
-        const shapeSize = 4;
-        const spacing = 2;
-        const offset = (gridSize - 1) * (shapeSize + spacing) / 2;
+        // Adicionar evento de mouseover para o primeiro quadrado
+        firstSquare.addEventListener('mouseover', function() {
+            firstSquare.material = darkenedMaterial; // Mudar o material para darkenedMaterial quando o cursor estiver sobre ele
+        });
 
-        for (let i = 0; i < gridSize; i++) {
-            for (let j = 0; j < gridSize / 2; j++) {
-                let material;
-                if (i === 0 && j === 0) {
-                    material = new THREE.MeshBasicMaterial({ map: texture, transparent: true });
-                } else {
-                    material = new THREE.MeshLambertMaterial({ color: Math.random() * 0xffffff });
-                }
-                const shape = createShape(shapeSize, material);
-                shape.position.set(
-                    i * (shapeSize + spacing) - offset,
-                    0,
-                    j * (shapeSize + spacing) - offset
-                );
-                scene.add(shape);
-            }
-        }
+        // Adicionar evento de mouseout para o primeiro quadrado
+        firstSquare.addEventListener('mouseout', function() {
+            firstSquare.material = initialMaterial; // Mudar o material de volta para initialMaterial quando o cursor sair dele
+        });
 
-        // Render loop
+        // Loop de renderização
         function animate() {
             requestAnimationFrame(animate);
             renderer.render(scene, camera);
@@ -80,7 +88,7 @@
 
         animate();
 
-        // Handle window resize
+        // Lidar com o redimensionamento da janela
         window.addEventListener('resize', () => {
             const aspect = window.innerWidth / window.innerHeight;
             camera.left = -aspect * 30;
