--- a/Partida/teste.html
+++ b/Partida/teste.html
@@ -36,7 +36,7 @@
 
         // Load the texture for the first square
         const textureLoader = new THREE.TextureLoader();
-        const texture = textureLoader.load('https://example.com/your-image.png', function(texture) {
+        const texture = textureLoader.load('https://war-fast.vercel.app/GAME/PAISES/Brasil1.png', function(texture) {
             texture.wrapS = THREE.RepeatWrapping;
             texture.wrapT = THREE.RepeatWrapping;
             texture.repeat.set(1, 1);
