--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -85,6 +85,10 @@
             <div class="territory">Território 18</div>
             <div class="territory">Território 19</div>
             <div class="territory">Território 20</div>
+            <div class="territory">Território 21</div>
+            <div class="territory">Território 22</div>
+            <div class="territory">Território 23</div>
+            <div class="territory">Território 24</div>
         </div>
         <div id="controls">
             <button class="button">Atacar</button>
