--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -62,6 +62,7 @@
 <body>
     <header>
         <h1>Jogo War</h1>
+        <a href="/lobby/lobby.html">
     </header>
     <main>
         <div id="game-board">
