--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -1,100 +1,80 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo War</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-        main {
-            display: flex;
-            justify-content: center;
-            padding: 20px;
-        }
-        #game-board {
-            width: 800px;
-            height: 600px;
-            background-color: #e0e0e0;
-            border: 1px solid #ccc;
-            display: grid;
-            grid-template-columns: repeat(6, 1fr);
-            grid-template-rows: repeat(4, 1fr);
-            gap: 5px;
-        }
-        .territory {
-            background-color: #b3cde0;
-            border: 1px solid #333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 14px;
-            text-align: center;
-            cursor: pointer;
-        }
-        #controls {
-            margin-left: 20px;
-        }
-        .button {
-            display: block;
-            width: 100px;
-            padding: 10px;
-            margin: 10px 0;
-            background-color: #333;
-            color: white;
-            text-align: center;
-            cursor: pointer;
-            border: none;
-            border-radius: 5px;
-        }
-    </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Partida</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Jogo War</h1>
-    </header>
-    <main>
-        <div id="game-board">
-            <div class="territory">Território 1</div>
-            <div class="territory">Território 2</div>
-            <div class="territory">Território 3</div>
-            <div class="territory">Território 4</div>
-            <div class="territory">Território 5</div>
-            <div class="territory">Território 6</div>
-            <div class="territory">Território 7</div>
-            <div class="territory">Território 8</div>
-            <div class="territory">Território 9</div>
-            <div class="territory">Território 10</div>
-            <div class="territory">Território 11</div>
-            <div class="territory">Território 12</div>
-            <div class="territory">Território 13</div>
-            <div class="territory">Território 14</div>
-            <div class="territory">Território 15</div>
-            <div class="territory">Território 16</div>
-            <div class="territory">Território 17</div>
-            <div class="territory">Território 18</div>
-            <div class="territory">Território 19</div>
-            <div class="territory">Território 20</div>
-            <div class="territory">Território 21</div>
-            <div class="territory">Território 22</div>
-            <div class="territory">Território 23</div>
-            <div class="territory">Território 24</div>
+  <div class="container">
+    <h1>Partida</h1>
+
+    <div class="row mb-3">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Seu Objetivo</h3>
+          </div>
+          <div class="card-body" id="userObjective">
+            </div>
         </div>
-        <div id="controls">
-            <button class="button">Atacar</button>
-            <button class="button">Mover</button>
-            <button class="button">Passar</button>
+      </div>
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Suas Cartas</h3>
+          </div>
+          <div class="card-body d-flex flex-wrap justify-content-between" id="userCards">
+            </div>
         </div>
-    </main>
-</body>
+      </div>
+    </div>
+
+    <div class="card mb-3">
+      <div class="card-header">
+        <h3>Mapa (42 Territórios)</h3>
+      </div>
+      <div class="card-body" id="mapContainer">
+        </div>
+    </div>
+
+    <div class="card mb-3">
+      <div class="card-header">
+        <h3>Jogador Atual</h3>
+      </div>
+      <div class="card-body d-flex align-items-center" id="currentPlayer">
+        <span id="currentPlayerName"></span>
+        <span class="ms-2" id="currentPlayerColor" style="width: 20px; height: 20px; border-radius: 50%; display: inline-block;"></span>
+      </div>
+    </div>
+
+    <div class="card mb-3">
+      <div class="card-header">
+        <h3>Perfil</h3>
+      </div>
+      <div class="card-body d-flex align-items-center" id="playerProfile">
+        <span id="profileName"></span>
+        <span class="ms-2" id="profileColor" style="width: 20px; height: 20px; border-radius: 50%; display: inline-block;"></span>
+      </div>
+    </div>
+
+    <div class="d-flex justify-content-center">
+      <button type="button" class="btn btn-primary me-2" id="actionButton">Confirmar/Enviar</button>
+      <button type="button" class="btn btn-secondary" id="cancelButton">Cancelar</button>
+    </div>
+
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="partida.js"></script> </body>
 </html>
