--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -19,7 +19,7 @@
       position: relative; /* Enable absolute positioning for territories */
       width: 600px; /* Adjust map width as needed */
       height: 400px; /* Adjust map height as needed */
-      background-image: url('path/to/map-background.jpg'); /* Optional background image */
+      background-image: url('/IMAGE/Brasil.svg'); /* Optional background image */
       background-size: cover;
     }
 
