--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -92,4 +92,7 @@
 
     <div class="d-flex justify-content-center">
       <button type="button" class="btn btn-primary me-2" id="actionButton">Confirmar/Enviar</button>
-      <button type="button" class="btn btn-secondary" id="cancelButton">Cancelar</
+      <button type="button" class="btn btn-secondary" id="cancelButton">Cancelar</button>
+    </div>
+  </div>
+</
