--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <div class="container d-flex flex-wrap justify-content-center align-items-center">
-    <img src="imagens/icone1.svg" alt="Ícone 1" data-id="1">
-    <img src="imagens/icone2.svg" alt="Ícone 2" data-id="2">
-    <img src="imagens/icone3.svg" alt="Ícone 3" data-id="3">
+    <img src="/IMAGE/Africadosul.svg" alt="Ícone 1" data-id="1">
+    <img src="/IMAGE/Alaska.svg" alt="Ícone 2" data-id="2">
+    <img src="/IMAGE/Alemanha.svg" alt="Ícone 3" data-id="3">
     </div>
   <script src="script.js"></script>
 </body>
