--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -10,6 +10,7 @@
     <img src="/IMAGE/Africadosul.svg" alt="Ícone 1" data-id="1">
     <img src="/IMAGE/Alaska.svg" alt="Ícone 2" data-id="2">
     <img src="/IMAGE/Alemanha.svg" alt="Ícone 3" data-id="3">
+    <img src="/IMAGE/AmericaCentral.svg" alt="Ícone 4" data-id="4">
     </div>
   <script src="script.js"></script>
 </body>
