--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -2,51 +2,27 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Meus 42 PNGs Clicáveis</title>
+  <title>Meus 42 SVGs Clicáveis</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <style>
-    .icone {
-      position: relative;
-      display: inline-block;
-      width: 100px; /* Ajuste o tamanho conforme necessário */
-    }
-    .sobreposicao {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(255, 0, 0, 0.5); /* Cor de sobreposição (vermelho com transparência) */
-      opacity: 0; /* Oculta a sobreposição por padrão */
-      transition: opacity 0.3s ease; /* Adiciona uma transição suave */
-    }
-    .icone:hover .sobreposicao {
-      opacity: 1; /* Exibe a sobreposição quando o mouse passa sobre a imagem */
-    }
-  </style>
 </head>
 <body>
   <div class="container d-flex flex-wrap justify-content-center align-items-center">
-    <div class="icone" data-id="1">
-      <img src="/IMAGE/Alaska.svg" alt="Ícone 1">
-      <div class="sobreposicao"></div>
-    </div>
-    <div class="icone" data-id="2">
-      <img src="/IMAGE/Alemanha.svg" alt="Ícone 2">
-      <div class="sobreposicao"></div>
-    </div>
-    <div class="icone" data-id="3">
-      <img src="/IMAGE/AmericaCentral.svg" alt="Ícone 3">
-      <div class="sobreposicao"></div>
-    </div>
+    <img src="/IMAGE/Alaska.svg" alt="Ícone 1" data-id="1">
+    <img src="/IMAGE/Alemanha.svg" alt="Ícone 2" data-id="2">
+    <img src="/IMAGE/AmericaCentral.svg" alt="Ícone 3" data-id="3">
     <!-- Restante dos ícones aqui -->
   </div>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-      // Adicione um event listener para cada ícone
-      document.querySelectorAll(".icone").forEach(function(icone) {
-        icone.addEventListener("click", function() {
+      // Adicione um event listener para cada imagem
+      document.querySelectorAll("img").forEach(function(img) {
+        img.addEventListener("click", function() {
+          // Obtém o ID clicado
           var id = this.getAttribute("data-id");
+          
+          // Define a cor do SVG para vermelho
+          this.style.fill = "red";
+          
           // Faça algo com o ID clicado, como redirecionar para uma página específica
           console.log("Você clicou no ícone com o ID:", id);
         });
