--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -7,36 +7,33 @@
 </head>
 <body>
   <div class="container d-flex flex-wrap justify-content-center align-items-center">
-    <img src="/IMAGE/Alaska.svg" alt="Ícone 1" data-id="1">
+    <img id="icone" src="/IMAGE/Alaska.svg" alt="Ícone 1" data-id="1">
     <img src="/IMAGE/Alemanha.svg" alt="Ícone 2" data-id="2">
     <img src="/IMAGE/AmericaCentral.svg" alt="Ícone 3" data-id="3">
     <!-- Restante dos ícones aqui -->
   </div>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-      // Função para manipular o clique na imagem
-      function changeColor(color) {
-        return function() {
-          // Obtém o SVG dentro da imagem
-          var svg = this.querySelector("svg");
-          if (svg) {
-            // Seleciona o elemento path dentro do SVG e define a cor de preenchimento
-            var paths = svg.querySelectorAll("path");
-            paths.forEach(function(path) {
-              path.style.fill = color;
-            });
-          }
-          
-          // Obtém o ID clicado
-          var id = this.getAttribute("data-id");
-          // Faça algo com o ID clicado, como redirecionar para uma página específica
-          console.log("Você clicou no ícone com o ID:", id);
-        };
+      // Função para capturar o fill da imagem SVG
+      function getFillColor() {
+        // Obtém o SVG dentro da imagem
+        var svg = document.querySelector("#icone svg");
+        if (svg) {
+          // Obtém o fill do SVG
+          var fill = svg.style.fill;
+          // Retorna o valor do fill
+          return fill;
+        }
+        // Retorna null se não encontrar o SVG
+        return null;
       }
 
-      // Adicione um event listener para cada imagem
-      document.querySelectorAll("img").forEach(function(img) {
-        img.addEventListener("click", changeColor("red")); // Defina a cor desejada aqui
+      // Adiciona um event listener para a imagem
+      document.getElementById("icone").addEventListener("click", function() {
+        // Captura o fill da imagem clicada
+        var fill = getFillColor();
+        // Exibe o valor do fill no console
+        console.log("O fill da imagem é:", fill);
       });
     });
   </script>
