--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -7,9 +7,8 @@
 </head>
 <body>
   <div class="container d-flex flex-wrap justify-content-center align-items-center">
-    <img id="icone" src="/IMAGE/Alaska.svg" alt="Ícone 1" data-id="1">
-    <img src="/IMAGE/Alemanha.svg" alt="Ícone 2" data-id="2">
-    <img src="/IMAGE/AmericaCentral.svg" alt="Ícone 3" data-id="3">
+    <img id="icone" src="https://war-fast.vercel.app/IMAGE/AmericaCentral.svg" alt="Ícone 1" data-id="1">
+   
     <!-- Restante dos ícones aqui -->
   </div>
   <script>
