--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -9,7 +9,7 @@
       width: 100%;
       max-width: 1200px; /* Ajuste conforme necessário */
       margin: 0 auto;
-      background-image: url('/IMAGE/mundi.png'); /* Substitua pelo caminho da sua imagem de mapa */
+      background-image: url('/IMAGE/Mundi.svg'); /* Substitua pelo caminho da sua imagem de mapa */
       background-size: cover;
       height: 600px; /* Ajuste conforme necessário */
     }
