--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -7,7 +7,7 @@
     #map-container {
       position: relative;
       width: 100%;
-      max-width: 1600px; /* Ajuste conforme necessário */
+      max-width: 16 00px; /* Ajuste conforme necessário */
       margin: 0 auto;
       background-image: url('/IMAGE/Mundi.svg'); /* Substitua pelo caminho da sua imagem de mapa */
       background-size: cover;
@@ -30,9 +30,43 @@
     document.addEventListener("DOMContentLoaded", function() {
       // Lista de URLs dos SVGs e suas coordenadas no mapa (exemplo)
       var svgData = [
-        { url: "/IMAGE/Alaska.svg", x: 50, y: 50 },
-        { url: "/IMAGE/Alemanha.svg", x: 400, y: 200 },
-        { url: "/IMAGE/AmericaCentral.svg", x: 200, y: 300 },
+        { url: "/IMAGE/Alaska.svg", x: 80, y: 60 },
+        { url: "/IMAGE/Alemanha.svg", x: 520, y: 220 },
+        { url: "/IMAGE/AmericaCentral.svg", x: 220, y: 360 },
+        { url: "/IMAGE/Aral.svg", x: 700, y: 200 },
+        { url: "/IMAGE/Argelia.svg", x: 500, y: 420 },
+        { url: "/IMAGE/Argentina.svg", x: 330, y: 560 },
+        { url: "/IMAGE/AustraliaNorte.svg", x: 950, y: 580 },
+        { url: "/IMAGE/AustraliaSul.svg", x: 950, y: 620 },
+        { url: "/IMAGE/Borneo.svg", x: 860, y: 470 },
+        { url: "/IMAGE/Brasil.svg", x: 380, y: 480 },
+        { url: "/IMAGE/California.svg", x: 120, y: 280 },
+        { url: "/IMAGE/Congo.svg", x: 600, y: 460 },
+        { url: "/IMAGE/Dudinka.svg", x: 750, y: 100 },
+        { url: "/IMAGE/Egito.svg", x: 550, y: 400 },
+        { url: "/IMAGE/Franca.svg", x: 520, y: 260 },
+        { url: "/IMAGE/Groelandia.svg", x: 480, y: 60 },
+        { url: "/IMAGE/India.svg", x: 750, y: 400 },
+        { url: "/IMAGE/Inglaterra.svg", x: 500, y: 180 },
+        { url: "/IMAGE/Islandia.svg", x: 480, y: 140 },
+        { url: "/IMAGE/Japao.svg", x: 950, y: 260 },
+        { url: "/IMAGE/Labrador.svg", x: 360, y: 120 },
+        { url: "/IMAGE/Mackenzie.svg", x: 200, y: 100 },
+        { url: "/IMAGE/Mexico.svg", x: 160, y: 320 },
+        { url: "/IMAGE/Moscou.svg", x: 620, y: 180 },
+        { url: "/IMAGE/NovaGuine.svg", x: 930, y: 500 },
+        { url: "/IMAGE/NovaYork.svg", x: 280, y: 160 },
+        { url: "/IMAGE/OrienteMedio.svg", x: 680, y: 340 },
+        { url: "/IMAGE/Ottawa.svg", x: 300, y: 120 },
+        { url: "/IMAGE/Peru.svg", x: 300, y: 400 },
+        { url: "/IMAGE/Polonia.svg", x: 620, y: 220 },
+        { url: "/IMAGE/Siberia.svg", x: 800, y: 140 },
+        { url: "/IMAGE/Sudao.svg", x: 600, y: 440 },
+        { url: "/IMAGE/Suecia.svg", x: 540, y: 140 },
+        { url: "/IMAGE/Sumatra.svg", x: 830, y: 500 },
+        { url: "/IMAGE/Vanculver.svg", x: 100, y: 80 },
+        { url: "/IMAGE/Venezuela.svg", x: 280, y: 340 },
+        { url: "/IMAGE/Vladvostok.svg", x: 900, y: 160 } 
         // Adicione mais URLs e coordenadas conforme necessário
       ];
 
