--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -5,7 +5,7 @@
   <title>Mapa Mundi com SVGs</title>
   <style>
     #map-container {
-      position: relative;
+      position: absolute;
       width: 100%;
       max-width: 1600px; /* Ajuste conforme necessário */
       margin: 0 auto;
