--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -31,7 +31,7 @@
       // Lista de URLs dos SVGs e suas coordenadas no mapa (exemplo)
       var svgData = [
         { url: "/IMAGE/Alaska.svg", x: 80, y: 60 },
-        { url: "/IMAGE/Alemanha.svg", x: 520, y: 220 },
+       /* { url: "/IMAGE/Alemanha.svg", x: 520, y: 220 },
         { url: "/IMAGE/AmericaCentral.svg", x: 220, y: 360 },
         { url: "/IMAGE/Aral.svg", x: 700, y: 200 },
         { url: "/IMAGE/Argelia.svg", x: 500, y: 420 },
@@ -66,7 +66,7 @@
         { url: "/IMAGE/Sumatra.svg", x: 830, y: 500 },
         { url: "/IMAGE/Vanculver.svg", x: 100, y: 80 },
         { url: "/IMAGE/Venezuela.svg", x: 280, y: 340 },
-        { url: "/IMAGE/Vladvostok.svg", x: 900, y: 160 } 
+        { url: "/IMAGE/Vladvostok.svg", x: 900, y: 160 } */
         // Adicione mais URLs e coordenadas conforme necessário
       ];
 
