--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <title>Mapa Mundi com SVGs</title>
   <style>
-    #map-container {
-      position: absolute;
+   #map-container {
+      position: relative;
       width: 100%;
-      max-width: 1600px; /* Ajuste conforme necessário */
+      max-width: 1200px; /* Ajuste conforme necessário */
       margin: 0 auto;
-      background-image: url('/IMAGE/Mundi.svg'); /* Substitua pelo caminho da sua imagem de mapa */
+      background-image: url('/IMAGE/Mundi.svg') /* Substitua pelo caminho da sua imagem de mapa */
       background-size: cover;
-      height: 1000px; /* Ajuste conforme necessário */
+      height: 0;
+      padding-bottom: 50%; /* Mantém a proporção da imagem do mapa */
     }
     .svg-icon {
       position: absolute;
