--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -15,9 +15,9 @@
       padding-bottom: 50%; /* Mantém a proporção da imagem do mapa */
     }
     .svg-icon {
-      position: absolute;
-      width: 40px; /* Ajuste conforme necessário */
-      height: 40px; /* Ajuste conforme necessário */
+        position: absolute;
+      width: 3%; /* Ajuste conforme necessário */
+      height: auto;
       cursor: pointer;
     }
   </style>
